# little-assembler

./: Cargo.toml  LICENSE  README.md
.gitea/workflows/: check-format-and-test.yaml
.github/workflows/: check-format-and-test.yaml
assemblers/: Cargo.toml
assemblers/src/: lib.rs
assemblers/src/lc2/: lexer.rs  mod.rs  parser.rs
assemblers/src/lc2/parser/: mod.rs  token_helpers.rs  token_operations.rs
assemblers/src/lc2/tests/: labels.rs  mod.rs  parse_numbers.rs
assemblers/src/lc2/tests/orig_end/: mod.rs  normal.rs  variants.rs
assemblers/src/lc2/tests/parse_operations/: mod.rs  normal.rs
assemblers/src/lc2/tests/parse_pseudo_operations/: errors.rs  mod.rs  normal.rs
