[package]
name = "assemblers"
version = "0.1.0"
edition = "2021"
license = "GNU AGPLv3.0"
repository = "https://git.nicolabelluti.me/little-emulator/little-assembler"
documentation = "https://little-emulator.org"

[dependencies]
architectures = { git = "https://git.nicolabelluti.me/little-emulator/little-emulator.git" }
derive_builder = "0.20.0"
log = "0.4.22"
logos = "0.14.0"
thiserror = "1.0.63"
